--- a/index.html
+++ b/index.html
@@ -333,7 +333,6 @@
     <section id="contact">
       <p class="section__text__p1">Get in Touch</p>
       <h1 class="title">Contact Me</h1>
-
       <div class="contact-info-upper-container">
         <div class="contact-info-container">
           <img
@@ -352,30 +351,19 @@
           <p><a href="https://www.linkedin.com/in/uma-a-/">LinkedIn</a></p>
         </div>
       </div>
-
-
-
-
-
   <!-- Form -->
   <div class="contact-form-container">
-    
-    <form action="https://script.google.com/macros/s/AKfycbySbaFNUDr1q2mA4cNIj-W182u2xrKkvjLQdayfOvHbmd_xSGHHovaTfcPxaRdRi2Wq/exec" method="post">
+    <form name="submit-to-google-sheet">
       <label for="name">Name:</label>
-      <input type="text" id="name" name="name" required>
-
+      <input type="text" id="name" name="Name" required>
       <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required>
-
+      <input type="email" id="email" name="Email" required>
       <label for="message">Message:</label>
-      <textarea id="message" name="message" rows="5" required></textarea>
-
+      <textarea id="message" name="Message" rows="5" required></textarea>
       <button class="btn btn-color-2 project-btn" type="submit">Submit</button>
     </form>
   </div>
 </section>
-
-
     <footer>
       <nav>
         <div class="nav-links-container">
