--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
+    <link rel="icon" href="assets\ProfilePic.jpg" type="image/gifs">
   </head>
   <body>
     <nav id="desktop-nav">
@@ -416,7 +417,7 @@
             <li><a href="#about">About</a></li>
             <li><a href="#experience">Skills</a></li>
             <li><a href="#projects">Projects</a></li>
-            <!--<li><a href="CV">Services</a></li>-->
+            <li><a href="CV">Services</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
