--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
       <input type="email" id="email" name="Email" required>
       <label for="message">Message:</label>
       <textarea id="message" name="Message" rows="5" required></textarea>
-      <button class="btn btn-color-2 project-btn" type="submit">Submit</button>
+      <button class="btn btn-color-2 project-btn" id = 'submit-button' type="submit">Submit</button>
     </form>
   </div>
 </section>
